fix: angular collapse (#60)
* fix angular collapse

* fix dancing girl

* Update home.component.ts

--- a/Moonback/src/app/home/home.component.css
+++ b/Moonback/src/app/home/home.component.css
@@ -2,3 +2,11 @@
     width: 2rem;
     height: 2rem;
 }
+
+.float-left{
+    height: 4rem;
+}
+
+.float-right{
+    height: 4rem;
+}
